--- a/server/templates/admin-reservations-calendar.page.tmpl
+++ b/server/templates/admin-reservations-calendar.page.tmpl
@@ -29,6 +29,10 @@ Reservation Calendar
 </div>
 <div class="clearfix"></div>
 
+<form method='post' action='/admin/reservations-calendar'>
+<input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
+<input type="hidden" name="m" value="{{index .StringMap "this_month"}}" />
+<input type="hidden" name="y" value="{{index .StringMap "this_month_year"}}" />
 {{range $rooms}}
 {{$roomID := .ID}}
 {{$blocks := index $.Data (printf "block_map_%d" .ID)}}
@@ -60,6 +64,7 @@ Reservation Calendar
       
       {{else}}
       name ="add_block_{{$roomID}}_{{printf "%s-%s-%d" $currentYear $currentMonth (add $index 1)}}"
+      value='"1'
       {{end}}
       type="checkbox" />
       {{end}}
@@ -72,5 +77,9 @@ Reservation Calendar
 </div>
 
 {{end}}
+<hr>
+<button class='btn btn-primary' type='submit'>Save Changes</button>
+
+</form>
 </div>
 {{ end }}
