--- a/server/templates/admin-reservations-calendar.page.tmpl
+++ b/server/templates/admin-reservations-calendar.page.tmpl
@@ -1,85 +1,90 @@
 {{template "admin" .}}
 {{define "page-title"}}
 Reservation Calendar
-{{ end }}
+{{end}}
 
 {{define "content"}}
 {{$now := index .Data "now"}}
 {{$rooms := index .Data "rooms"}}
-{{$daysInMonth := index .IntMap "days_in_month"}}
-{{$currentMonth := index .StringMap "this_month"}}
-{{$currentYear := index .StringMap "this_month_year"}}
-
-
+{{$dim := index .IntMap "days_in_month"}}
+{{$curMonth := index .StringMap "this_month"}}
+{{$curYear := index .StringMap "this_month_year"}}
 
 <div class="col-md-12">
   <div class="text-center">
-    <h3>
-      {{formatDate $now "January"}} {{formatDate $now "2006"}}
-    </h3>
-   
+    <h3>{{formatDate $now "January"}} {{formatDate $now "2006"}}</h3>
   </div>
   <div class="float-start">
-    <a class='btn btn-sm btn-outline-secondary' 
-    href="/admin/reservations-calendar?y={{index .StringMap "prev_month_year"}}&m={{index .StringMap "prev_month"}}">&lt;&lt;</a>
-</div>
-<div class="float-end">
-    <a class='btn btn-sm btn-outline-secondary' 
-    href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
-</div>
-<div class="clearfix"></div>
+    <a
+      class="btn btn-sm btn-outline-secondary"
+      href="/admin/reservations-calendar?y={{index .StringMap "prev_month_year"}}&m={{index .StringMap "prev_month"}}"
+      >&lt;&lt;</a
+    >
+  </div>
+  <div class="float-end">
+    <a
+      class="btn btn-sm btn-outline-secondary"
+      href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}"
+      >&gt;&gt;</a
+    >
+  </div>
+  <div class="clearfix"></div>
 
-<form method='post' action='/admin/reservations-calendar'>
-<input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
-<input type="hidden" name="m" value="{{index .StringMap "this_month"}}" />
-<input type="hidden" name="y" value="{{index .StringMap "this_month_year"}}" />
-{{range $rooms}}
-{{$roomID := .ID}}
-{{$blocks := index $.Data (printf "block_map_%d" .ID)}}
-{{$reservations := index $.Data (printf "reservation_map_%d" .ID)}}
+  <form method="post" action="/admin/reservations-calendar">
+    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+    <input type="hidden" name="m" value="{{index .StringMap "this_month"}}">
+    <input type="hidden" name="y" value="{{index .StringMap "this_month_year"}}">
 
-<h4 class='mt-4'>{{.Name}}</h4>
+    {{range $rooms}}
+        {{$roomID := .ID}}
+        {{$blocks := index $.Data (printf "block_map_%d" .ID)}}
+        {{$reservations := index $.Data (printf "reservation_map_%d" .ID)}}
 
-<div class='table-responsive'>
-  <table class='table table-bordered table-striped table-sm'>
-   <tr class='table-dard'>
-    {{range $index := iterate $daysInMonth}}
-      <td class='text-center'>{{add $index 1}}</td>
+        <h4 class="mt-4">{{.Name}}</h4>
+
+        <div class="table-response">
+            <table class="table table-bordered table-sm">
+                <tr class="table-dark">
+                    {{range $index := iterate $dim}}
+                        <td class="text-center">
+                            {{add $index 1}}
+                        </td>
+                    {{end}}
+                </tr>
+
+                <tr>
+                    {{range $index := iterate $dim}}
+                        <td class="text-center">
+                            {{if gt (index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0}}
+                                <a href="/admin/reservations/cal/{{index $reservations (printf "%s-%s-%d" $curYear $curMonth (add $index 1))}}/show?y={{$curYear}}&m={{$curMonth}}">
+                                    <span class="text-danger">R</span>
+                                </a>
+                            {{else}}
+                                <input
+                                        {{if gt (index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))) 0 }}
+                                            checked
+                                            name="remove_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}"
+                                            value="{{index $blocks (printf "%s-%s-%d" $curYear $curMonth (add $index 1))}}"
+                                        {{else}}
+                                            name="add_block_{{$roomID}}_{{printf "%s-%s-%d" $curYear $curMonth (add $index 1)}}"
+                                            value="1"
+                                        {{end}}
+                                        type="checkbox">
+                            {{end}}
+                        </td>
+                    {{end}}
+                </tr>
+            </table>
+        </div>
+
+
     {{end}}
-   </tr>
-   <tr>
-    {{range $index := iterate $daysInMonth}}
-    <td  class='text-center'>
-      {{if gt (index $reservations (printf "%s-%s-%d" $currentYear $currentMonth (add $index 1))) 0}}
-      <a href="/admin/reservations/cal/{{index $reservations (printf "%s-%s-%d" $currentYear $currentMonth (add $index 1))}}">
-        <span class='text-danger'>R</span>
-      </a>
-      {{else}}
-      <input
-      
-      {{if gt (index $blocks (printf "%s-%s-%d" $currentYear $currentMonth (add $index 1))) 0}}
-      checked
-      name ="remove_block_{{$roomID}}_{{printf "%s-%s-%d" $currentYear $currentMonth (add $index 1)}}"
-      value = "{{index $blocks (printf "%s-%s-%d" $currentYear $currentMonth (add $index 1))}}"
-      
-      {{else}}
-      name ="add_block_{{$roomID}}_{{printf "%s-%s-%d" $currentYear $currentMonth (add $index 1)}}"
-      value='"1'
-      {{end}}
-      type="checkbox" />
-      {{end}}
-    </td>
-   
-  {{end}}
-   </tr>
 
-  </table>
-</div>
+    <hr>
 
-{{end}}
-<hr>
-<button class='btn btn-primary' type='submit'>Save Changes</button>
+    <input type="submit" class="btn btn-primary" value="Save Changes">
+
 
 </form>
 </div>
-{{ end }}
+{{end}}
